--- a/style.css
+++ b/style.css
@@ -314,6 +314,9 @@ select{
    .hero h1{
     text-align: center;
    }
+   .beenlow{
+    margin-top: 60px;
+   }
 }
 
 
@@ -351,6 +354,9 @@ select{
    }
    .hero h1{
     text-align: center;
+   }
+   .beenlow{
+    margin-top: 60px;
    }
 }
 
@@ -390,6 +396,9 @@ select{
    }
    .tittle{
     margin-top: 30px;
+   }
+   .beenlow{
+    margin-top: 60px;
    }
 }
 
